# Learning_C

./: .clang-format  .gitignore  Learning_C.code-workspace  README.md  SimpleAdd.c  WriteSerial.c  a.out  ansi_test.ans  binaryRecursion  binaryRecursion.c  factorial  factorial.c  fib  fib.c  hello  hello.c  hello1.c  hello2.c  hexNumbers  hexNumbers.c  minunit.h  minunit_examples.c  printDistance.c  simpleadd.s  sizes_ranges1.c  tictac  tictac.c
Chap08_enumeration/: shapes
Chap09_Structures/: card4.c  card5
Chap11_Arrays/: a.out  array1.c  array2.c  array2.out  array3.c
Chap12_Multi-DimensionalArrays/: arraysND.c
Chap13_Pointers/: pointers1.c  pointers2.c  pointers3.c  pointers4.c
Chap14_Pointers_And_Arrays/: array_of_pointers.c  arrays_pointers.c  arrays_pointers_func.c
Chap15_Strings/: greet.c  printASCIIwithControl  printASCIIwithControl.c  printascii.c  showchar.c  simplestrings.c
Chap16_ComplexStructures/: carddeck_0.c  carddeck_1.c  carddeck_2.c  carddeck_3
Chap17_MemoryAllocation/: heading.c
Chap18_DynamicMemory/: LinkedList.c  a.out
Chap19_FormattedOutput/: character_string  character_string.c  double  double.c  signedInt  signedInt.c  unsignedInt  unsignedInt.c
Chap23_UsingFileInputAndOutput/: CMakeLists.txt  a.out  nameList  nameList.c  nameList.h  names.data  sortNames  sortNames.c  sorted.data  sortedData
Chap23_UsingFileInputAndOutput/temp/: createUnsorted.c  getoptFiles  getoptFiles.c
Chap24_Multi_File_Programs/: CMakeLists.txt  a.out  card  card.c  card.h  carddeck_3.txt  dealer  dealer.c  dealer.h  deck.c  deck.h  hand.c  hand.h
(+93 files in other folders)
